feat: rebrand project to FunBaza
