# backend/internal/handlers/generation.go
@@ -13,11 +13,11 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
-	"github.com/you/fungreet/internal/middleware"
-	"github.com/you/fungreet/internal/models"
-	"github.com/you/fungreet/internal/repository"
-	"github.com/you/fungreet/internal/services"
-	"github.com/you/fungreet/internal/worker"
+	"github.com/you/funbaza/internal/middleware"
+	"github.com/you/funbaza/internal/models"
+	"github.com/you/funbaza/internal/repository"
+	"github.com/you/funbaza/internal/services"
+	"github.com/you/funbaza/internal/worker"
 )
 
 type GenerationHandler struct {
