# backend/internal/handlers/webhook.go
@@ -12,10 +12,10 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
-	"github.com/you/fungreet/internal/models"
-	"github.com/you/fungreet/internal/repository"
-	"github.com/you/fungreet/internal/services"
-	"github.com/you/fungreet/internal/worker"
+	"github.com/you/funbaza/internal/models"
+	"github.com/you/funbaza/internal/repository"
+	"github.com/you/funbaza/internal/services"
+	"github.com/you/funbaza/internal/worker"
 )
 
 type WebhookHandler struct {
